--- a/tex/docinfo.tex
+++ b/tex/docinfo.tex
@@ -18,7 +18,7 @@
 \newcommand{\hsmajahr}{2020} % Jahr der Abgabe
 \newcommand{\hsmafirma}{} % Firma bei der die Arbeit durchgeführt wurde
 \newcommand{\hsmabetreuer}{Prof. Dr. Thomas Ihme, Hochschule Mannheim} % Betreuer an der Hochschule
-\newcommand{\hsmazweitkorrektor}{} % Betreuer im Unternehmen oder Zweitkorrektor
+\newcommand{\hsmazweitkorrektor}{Dipl.-Phys. Ute Ihme, Hochschule Mannheim} % Betreuer im Unternehmen oder Zweitkorrektor
 \newcommand{\hsmafakultaet}{I} % I für Informatik oder E, S, B, D, M, N, W, V
 \newcommand{\hsmastudiengang}{IB} % IB IMB UIB IM MTB (weitere siehe titleblatt.tex)
 
