--- a/tex/kapitel/kapitel_4_konzept.tex
+++ b/tex/kapitel/kapitel_4_konzept.tex
@@ -17,6 +17,6 @@ Des Weiteren sollen die Gelenkbewegungen nicht mehr über OpenInventor \autocite
 
 Da der Laufplaner und die Simulation voneinander getrennt sein sollen, damit das System flexibel für den Austausch von Komponenten bleibt, benötigt der Laufplaner ebenso wie bei André Herms und Uli Ruffler eine xml-Schnittstelle, welche Bewegungen repräsentiert. Die hier dargestellte Schnittstelle soll eine Abwandlung der vorherigen Schnittstellen sein, da diese nicht die Dauer von Bewegungen speichert, sondern lediglich für jeden Schritt die Fußpositionen relativ zur definierten Ausgangsposition. Wie im Vorgängermodell sollen Bewegungen generiert und auch eingelesen werden können.
 
-Der vorherige Laufplaner hat kinematische Berechnungen manuell in OpenInventor durchgeführt. Das neue System soll das \ac{ROS}-Framework \textsc{tf} verwenden, um möglichst einfach Koordinatentransformationen sowie die direkte und inverse Kinematik zu berechnen. Auch für weitere geometrische Berechnungen soll ausschließlich das \textsc{tf}-Framework zum Einsatz kommen.
+Der vorherige Laufplaner hat kinematische Berechnungen manuell in OpenInventor durchgeführt. Das neue System soll das \ac{ROS}-Framework \textsc{tf} verwenden, um möglichst einfach Koordinatentransformationen zu berechnen. Die inverse Kinematik wird weiterhin über die analytische Methode berechnet. Allerdings werden dabei die Objektfunktionen von \textsc{tf} verwendet. Weitere geometrische Berechnungen werden ebenfalls über das \textsc{tf}-Framework berechnet.
 
 Des Weiteren muss der Algorithmus auf den Laufroboter Akrobat angepasst werden, da der vorherige Algorithmus auf dem \emph{Lauron III} basiert und die Maße andere sind.
