--- a/tex/preambel.tex
+++ b/tex/preambel.tex
@@ -54,7 +54,7 @@
 \usepackage{scrhack}              % tocbasic Warnung entfernen
 \usepackage[all]{hypcap}          % Korrekte Verlinkung von Floats
 \usepackage{tabularx}             % Spezielle Tabellen
-\usepackage[backend=biber,
+\usepackage[defernumbers=true,backend=biber,
   isbn=false,                     % ISBN nicht anzeigen, gleiches geht mit nahezu allen anderen Feldern
   sortlocale=\hsmasortlocale,     % Sortierung der Einträge für Deutsch
                                   %      de_DE: für Deutsch
