--- a/tex/kapitel/kapitel_3_verwandt.tex
+++ b/tex/kapitel/kapitel_3_verwandt.tex
@@ -3,6 +3,8 @@
 
 Dieses Kapitel stellt weitere Arbeiten dar, die sich mit dem Thema der Laufplanung von sechsbeinigen Laufrobotern mittels Random Sampling auseinandergesetzt haben.
 
+\section{André Herms}
+
 Andrè Herms \autocite{herms2004} vergleicht zunächst die folgenden Algorithmen zur Laufplanung:
 \begin{itemize}
   \item Random Sampling
@@ -72,5 +74,7 @@ Des Weiteren stellt das Terrain-Objekt die Höhenkarte der Landschaft in OpenInv
 Eine Konfigurationsdatei existiert bereits in dieser Umgebung, die es ermöglichen soll, auch andere Robotermodelle zu testen. Diese wird für den Laufalgorithmus allerdings nicht genutzt, da dort Roboterangaben direkt im Quelltext definiert sind.
 
 Weiterhin wird die aktuelle Fußkonfiguration sowie die Fußposition getrennt voneinander gespeichert. Die Fußkonfiguration ist in einer Bitlogik gespeichert. Dies ist sehr nützlich um Speicherplatz zu sparen, macht auf der anderen Seite das Finden von Fehlern allerdings schwieriger.
+
+\section{Uli Ruffler}
 
 Uli Ruffler \autocite{ruffler2006} hat den Laufplaner auf eine inkrementelle Arbeitsweise angepasst. Des Weiteren hat er die Basis für die Stereobildverarbeitung gelegt. Der Laufplaner kann nun während des Laufens neue Lösungen generieren, allerdings werden diese Lösungen noch nicht verwendet.
