--- a/tex/kapitel/kapitel_7_zusammenfassung.tex
+++ b/tex/kapitel/kapitel_7_zusammenfassung.tex
@@ -1,6 +1,14 @@
 \chapter{Zusammenfassung}
 \label{kap7}
 
+TODO START:
+Tipp:
+Fassen Sie alle Erkenntnisse und Ergebnisse der Arbeit sorgsam ("buchhalterisch genau") zusammen. Das ist wie das Etikett auf der Mineralwasserflasche. Was da nicht drauf steht, ist an Mineralien nicht drin. Beim strategischen lesen liest man das gleich nach dem Abstract.
+Ich meine, dass das Reflektieren einzelner Kapitel hier nicht sinnvoll ist, da Grundlagenkapitel naturgemäß keine neuen Ergebnisse darstellen.
+Neue Erkenntnisse über den alten Laufplaner sind aber durchaus sinnvoll.
+Wenn Sie alles zusammengetragen haben, bringen Sie noch ein "Fazit über alles", sozusagen die "Zusammenfassung der Zusammenfassung".
+TODO END
+
 Das Ziel dieser Arbeit war es den Laufplaner für den Lauron III von André Herms, welcher über die OpenInventor-Simulation entwickelt wurde, für den Akrobat auf \ac{ROS} und Gazebo bereitzustellen.
 
 Um dieses Ziel zu erreichen, mussten in \autoref{kap2} die Grundlagen gelegt werden. Das Kapitel beschäftigt sich zunächst mit den beiden relevanten Laufrobotern Lauron und Akrobat, um die Unterschiede, welche für eine  Portierung wichtig sind, herauszuarbeiten. Danach wurden die Grundlagen für die direkte und inverse Kinematik gelegt, welche für die Fußsteuerung des Laufroboters benötigt werden. Danach geht das Kapitel auf verschiedene Arten der Laufplanung ein. Zuletzt führt das Kapitel noch in die Zielsysteme \acf{ROS} und Gazebo ein.
