--- a/tex/preambel.tex
+++ b/tex/preambel.tex
@@ -258,6 +258,6 @@
 
 \sisetup{per-mode=reciprocal,mode=text,range-phrase = {\text{~bis~}}}
 
-\usepackage{stix}
+\usepackage[lcgreekalpha]{stix}
 
-\usepackage[sort&compress,numbers]{natbib}
+\usepackage[square,compress]{natbib}
