--- a/tex/docinfo.tex
+++ b/tex/docinfo.tex
@@ -30,7 +30,15 @@
 % Abstract
 
 % Kurze (maximal halbseitige) Beschreibung, worum es in der Arbeit geht auf Deutsch
-\newcommand{\hsmaabstractde}{Diese Bachelorarbeit stellt eine Lösung für die Portierung eines bestehenden Laufplaners für sechsbeinige Laufroboter in das Robot Operating System (ROS) dar, einem open source Meta-Betriebssystem für die Entwicklung von Robotern. Ferner ist der bestehende Laufplaner für den Laufroboter LAURON III erschaffen worden, während die Neuentwicklung für den Laufroboter Akrobat ausgeführt werden soll. Diese Arbeit stellt das Konzept und die Implementierung dafür bereit.}
+\newcommand{\hsmaabstractde}{TODO START: Richtig gute Abstracts schreiben ist schwer. Vermutlich habe ich das schon einmal geschrieben, aber vorsichtshalber nochmal: Meistens ergeben sich gute Abstracts, wenn man folgende Fragen beantwortet:
+1. Worum geht es allgemein (-> Laufplanungsproblem)
+2. Welches konkrete Problem wird hier gelöst? (-> Migration von Visualisierung OpenInventor auf Gazebo mit Physikunterstützung (Mehrwert!)
+3. Wie wird das Problem hauptsächlich gelöst? Nutzung von Kombi Gazebo+ROS, um auch spätere Anwendung auf realem Roboter zu ermöglichen
+4. Was ist das wesentliche Ergebnis? (very cool stuff natürlich - darüber habe ich noch nichts gelesen)
+
+Die Abstract-Länge ist schon ok. Kurze Abstracts sind sehr schwer. Ein paar mehr Zeilen dürfen es sein.
+
+Diese Bachelorarbeit stellt eine Lösung für die Portierung eines bestehenden Laufplaners für sechsbeinige Laufroboter in das Robot Operating System (ROS) dar, einem open source Meta-Betriebssystem für die Entwicklung von Robotern. Ferner ist der bestehende Laufplaner für den Laufroboter LAURON III erschaffen worden, während die Neuentwicklung für den Laufroboter Akrobat ausgeführt werden soll. Diese Arbeit stellt das Konzept und die Implementierung dafür bereit.}
 
 % Kurze (maximal halbseitige) Beschreibung, worum es in der Arbeit geht auf Englisch
 \newcommand{\hsmaabstracten}{This bachelor thesis provides a solution for the migration of a gait planner of an existing six-legged walking-robot into the Robot Operating System (ROS). The ROS is an open source meta operating system used for the development of robots. The current walk planner is made for the LAURON III while the new planner should be made for the walking robot Akrobat. This bachelor thesis shows the concept and the implementation of this task.}
